[gd_scene load_steps=2 format=3 uid="uid://dyi8ku3tq2aw5"]

[ext_resource type="Script" uid="uid://c2s2jt3myqyfn" path="res://hud_a.gd" id="1_df1re"]

[node name="HUDa" type="CanvasLayer"]
script = ExtResource("1_df1re")

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -21.5
offset_right = 21.5
offset_bottom = 209.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 75
text = "0
"

[node name="Message" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -339.0
offset_top = -104.5
offset_right = 339.0
offset_bottom = 104.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 75
text = "Avoid the rats,
use AWSD to move"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -92.0
offset_top = -111.0
offset_right = 92.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 75
text = "Start"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
